[solar] fixed actions order on mobile for preview

--- a/solar/style/less/elements/action.less
+++ b/solar/style/less/elements/action.less
@@ -5,7 +5,7 @@
     padding: @margin * 2 0;
     margin-top: @margin;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
 
     a {
         text-decoration: none;
